credentials cvanwest gebruikt

--- a/demo/GraphTutorial/appsettings.json
+++ b/demo/GraphTutorial/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "common",
+    "TenantId": "bc5cc136-74d0-4c96-9784-c514e4975e7a", //voor multitenant "common" invullen
     "CallbackPath": "/signin-oidc"
   },
   "Logging": {
